cmake_minimum_required(VERSION 3.15)
project(Network)
find_package(BLAS REQUIRED)
find_package(Protobuf REQUIRED)
find_package(OpenCV 4.2 REQUIRED PATHS "/usr/local/opencv/" NO_DEFAULT_PATH)
include_directories(${OpenCV_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_LIBRARIES -ldl )
set(CMAKE_CXX_FLAGS "-O3 -DNDEBUG -march=native -pthread  -flto -ffat-lto-objects -fuse-linker-plugin")
PROTOBUF_GENERATE_CPP(ProtoSources ProtoHeaders proto/data.proto)
add_executable(Network main.cpp Network.cpp Network.h Utils.h ${ProtoSources} ${ProtoHeaders})
add_library(proto STATIC ${ProtoSources} ${ProtoHeaders})
target_link_libraries(Network ${BLAS_LIBRARIES} ${PROTOBUF_LIBRARY}  ${OpenCV_LIBS} )